--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <module>presto-array</module>
         <module>presto-jmx</module>
         <module>presto-record-decoder</module>
+        <module>presto-elasticsearch</module>
         <module>presto-kafka</module>
         <module>presto-redis</module>
         <module>presto-cassandra</module>
