--- a/presto-main/etc/config.properties
+++ b/presto-main/etc/config.properties
@@ -27,6 +27,7 @@ query.client.timeout=5m
 query.min-expire-age=30m
 
 plugin.bundles=\
+  ../presto-elasticsearch/pom.xml,\
   ../presto-blackhole/pom.xml,\
   ../presto-jmx/pom.xml,\
   ../presto-raptor/pom.xml,\
